init draft of 1090: Classic forkid v2 (kotti fix)
Signed-off-by: meows <b5c6@protonmail.com>

--- a/_specs/ecip-1082.md
+++ b/_specs/ecip-1082.md
@@ -3,7 +3,8 @@ lang: en
 ecip: 1082
 title: Fork identifier (`forkid`) protocol fork list specification
 author: github.com/meowsbits
-status: Final
+status: Superseded
+superseded-by: 1090
 type: Standards Track
 category: Networking
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/294
