use ECBP instead of 'Networking' category
The eligible fork specifications documented can be expected
to change over time as the network adopts further
protocol upgrades.

This change also includes client implementation references
and adds a change log.

Signed-off-by: meows <b5c6@protonmail.com>

--- a/_specs/ecip-1090.md
+++ b/_specs/ecip-1090.md
@@ -6,7 +6,7 @@ author: github.com/meowsbits
 status: Draft
 supersedes: 1082
 type: Standards Track
-category: Networking
+category: ECBP
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/294
 created: 2020-06-03
 license: Apache-2.0
@@ -20,11 +20,6 @@ EIP-2124 (`forkid`) and EIP-2364 (`eth/64`) propose discovery protocol modificat
 - https://eips.ethereum.org/EIPS/eip-2364
 
 This specification describes a set of forks which exclude TheDAO fork event block(s) from `forkid` calculations, as well as excluding all forthcoming `blockNumber % 5000000 == 0` blocks that, according to the algorithmdescribed in ECIP-1017 and enabled on ETC Mainnet and some testnets, will see reduced block reward values.
-
-> This version (v2) of the Ethereum Classic forkid specification corrects Kotti
-> forkid expectations. The derivation removes wrongly configured Ethash specifications
-> for the chain configuration, and in doing so removes two invalid forks from
-> the parameterized fork list.
 
 ### Motivation
 
@@ -44,7 +39,7 @@ Don't include any blocks subsequent and incidental to consensus-facing calculati
 
 #### Applied
 
-The following data points are valid at time of writing (see ECIP's `created-at` metadata).
+The following data points are valid at time of last edit.
 
 ##### Ethereum Classic Mainnet (ETC)
 
@@ -156,4 +151,14 @@ The Ethereum Classic disinflationary monetary policy is not considered a series 
 
 Respective reference implementations for `forkid` generation are documented in EIP-2124 and EIP-2364.
 
+At the time of last edit, client implementation tests may be found at:
+- Core-Geth: https://github.com/etclabscore/core-geth/blob/master/core/forkid/forkid_test.go#L132, https://github.com/etclabscore/core-geth/blob/master/core/forkid/forkid_test.go#L322
+- Multi-Geth: https://github.com/etclabscore/core-geth/blob/master/core/forkid/forkid_test.go#L132
+- OpenEthereum: https://github.com/openethereum/openethereum/blob/master/ethcore/sync/src/chain/fork_filter.rs#L145
+
+### Change Log
+
+- 2020-06-03
+  + Modify Kotti eligible fork specs, removing blocks 2M and 5M. Prior specifications were generated using a faulty chain configuration, which wrongly included these blocks. Rel https://github.com/goerli/testnet/pull/71.
+    - This modification is the first of its kind within this document, and is the sole modification against the superseded [ECIP1082](https://ecips.ethereumclassic.org/ECIPs/ecip-1082).
 
