switch status to Active
Signed-off-by: meows <b5c6@protonmail.com>

--- a/_specs/ecip-1090.md
+++ b/_specs/ecip-1090.md
@@ -3,7 +3,7 @@ lang: en
 ecip: 1090
 title: Fork identifier (`forkid`) protocol fork list specification v2
 author: github.com/meowsbits
-status: Draft
+status: Active
 supersedes: 1082
 type: Standards Track
 category: ECBP
