Move ECIP-1088 "Phoenix" to Final.

--- a/_specs/ecip-1088.md
+++ b/_specs/ecip-1088.md
@@ -2,7 +2,7 @@
 lang: en
 ecip: 1088
 title: Phoenix EVM and Protocol Upgrades
-status: Accepted
+status: Final
 type: Meta
 author: /raw PONG _GHMoaCXLT (@q9f)
 created: 2020-02-24
