--- a/_specs/ecip-1080.md
+++ b/_specs/ecip-1080.md
@@ -3,8 +3,7 @@ lang: en
 ecip: 1080
 title: SELFBALANCE opcode
 author: Bob Summerwill (@bobsummerwill)
-status: Last Call
-review-period-end: 2020-03-30
+status: Withdrawn
 type: Standards Track
 category: Core
 created: 2020-01-19
