fix number and path of ecip 1093

--- a/_specs/ecip-1093.md
+++ b/_specs/ecip-1093.md
@@ -1,12 +1,12 @@
 ---
 lang: en
-ecip: ECIP-1093
+ecip: 1093
 title: Change the ETC Proof of Work Algorithm to RandomX
 status: Draft
 type: Standards Track
 category: Core
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/329
-author: r0n1n (gitr0n1n@protonmail.com)
+author: r0n1n (@gitr0n1n)
 created: 2020-08-07
 ---
 
