fix: add suggested format changes from ecip-editor
- change doc to ecip-1095.md https://github.com/ethereumclassic/ECIPs/pull/341#r475136592
- change "type" to "standards track/core" https://github.com/ethereumclassic/ECIPs/pull/341#r475461033
- added discussion link https://github.com/ethereumclassic/ECIPs/pull/341#r475136957
- added license to footer https://github.com/ethereumclassic/ECIPs/pull/341#r475136668

--- a/_specs/ecip-1095.md
+++ b/_specs/ecip-1095.md
@@ -1,9 +1,9 @@
 ```
-ECIP: TBD
+ECIP: ECIP-1095
 Title: Change the ETC Proof of Work Algorithm to _vanilla_ Sha-3
 Status: Draft
-Type: Network
-Discussion: TBD
+Type: Standards Track / Core
+Discussion: https://github.com/ethereumclassic/ECIPs/issues/342
 Author: Stevan Lohja (stevanio@protonmail.com)
 License: Apache-2.0
 Created: 2020-08-20
@@ -68,6 +68,6 @@ References:
 2. Federal Information Processing Standards (FIPS). PUB 202. 2015. URL: https://nvlpubs.nist.gov/nistpubs/FIPS/NIST.FIPS.202.pdf 
 3. NIST. Approved Algorithms. URL: https://csrc.nist.gov/projects/hash-functions
 
+__License.__
 
-
-
+Apache 2.0
