--- a/_specs/ecip-1092.md
+++ b/_specs/ecip-1092.md
@@ -1,7 +1,7 @@
 ---
 lang: en
 ecip: 1092
-title: 51-percent attack solution: PirlGuard & Callisto
+title: 51-percent attack solution PirlGuard & Callisto
 status: Draft
 type: Standards Track
 category: Core
