--- a/_specs/ecip-1095.md
+++ b/_specs/ecip-1095.md
@@ -1,5 +1,5 @@
 ```
-ECIP: ECIP-1095
+ecip: 1095
 Title: Change the ETC Proof of Work Algorithm to _vanilla_ Sha-3
 Status: Draft
 Type: Standards Track / Core
