--- a/_specs/ecip-1095.md
+++ b/_specs/ecip-1095.md
@@ -2,7 +2,8 @@
 ecip: 1095
 Title: Change the ETC Proof of Work Algorithm to _vanilla_ Sha-3
 Status: Draft
-Type: Standards Track / Core
+type: Standards Track
+category: Core
 Discussion: https://github.com/ethereumclassic/ECIPs/issues/342
 Author: Stevan Lohja (stevanio@protonmail.com)
 License: Apache-2.0
