Fixed author and name to exclude symbols preventing ECIP from rendering

--- a/_specs/ecip-1092.md
+++ b/_specs/ecip-1092.md
@@ -1,12 +1,12 @@
 ---
 lang: en
 ecip: 1092
-title: 51-percent attack solution PirlGuard & Callisto
+title: 51-percent attack solution PirlGuard by Callisto
 status: Draft
 type: Standards Track
 category: Core
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/327
-author: dexaran (@dexaran)
+author: Dexaran
 created: 2020-07-08
 ---
 
