--- a/_specs/ecip-1092.md
+++ b/_specs/ecip-1092.md
@@ -6,7 +6,7 @@ status: Draft
 type: Standards Track
 category: Core
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/327
-author: Dexaran
+author: Dexaran (@Dexaran)
 created: 2020-07-08
 ---
 
