Reject ECIP-1093 "RandomX"

--- a/_specs/ecip-1093.md
+++ b/_specs/ecip-1093.md
@@ -2,7 +2,7 @@
 lang: en
 ecip: 1093
 title: Change the ETC Proof of Work Algorithm to RandomX
-status: Draft
+status: Rejected
 type: Standards Track
 category: Core
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/329
