--- a/_specs/ecip-1043.md
+++ b/_specs/ecip-1043.md
@@ -3,7 +3,8 @@ lang: en
 ecip: 1043
 title: Fixed DAG limit restriction 
 author: Cody Burns <cody.w.burns@gmail.com>, Wolf Spraul <wolf@linzhi.io>
-status: Draft
+status: Last Call
+review-period-end: 2008-09-18
 type: Standards Track
 category: Core
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/11
