Move ECIP-1049 "Keccak256" to Last Call

--- a/_specs/ecip-1049.md
+++ b/_specs/ecip-1049.md
@@ -2,7 +2,8 @@
 lang: en
 ecip: 1049
 title: Change the ETC Proof of Work Algorithm to Keccak256
-status: Draft
+status: Last Call
+review-period-end: 2020-10-09
 type: Standards Track
 category: Core
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/13
