Move ECIP-1095 "SHA-3" to Last Call

--- a/_specs/ecip-1095.md
+++ b/_specs/ecip-1095.md
@@ -2,7 +2,8 @@
 lang: en
 ecip: 1095
 title: Change the ETC Proof of Work Algorithm to Sha-3-256
-status: Draft
+status: Last Call
+review-period-end: 2020-10-09
 type: Standards Track
 category: Core
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/342
