fix header format and info

--- a/_specs/ecip-1098.md
+++ b/_specs/ecip-1098.md
@@ -1,13 +1,13 @@
 ---
+ecip: 1098
+title: Proto Treasury System
 lang: en
-ECIP: ECIP-XXX
-Title: Proto Treasury System 
-Author: Julian Mendiola, Nicolas Tallar, Brian McKenna 
-Discussions-To: https://github.com/ethereumclassic/ECIPs/issues/350 | https://github.com/input-output-hk/ECIPs/issues/2
-Status: Draft
-Type: Standards Track
-Category: Core
-Created: 2020-08-26
+author: Julian Mendiola (@jmendiola222), Nicolas Tallar(@ntallar), Brian McKenna(@bpmckenna)
+discussions-to: https://github.com/input-output-hk/ECIPs/issues/2
+status: Draft
+type: Standards Track
+category: Core
+created: 2020-08-26
 ---
 
 ### Abstract
