--- a/_specs/ecip-1097.md
+++ b/_specs/ecip-1097.md
@@ -1,9 +1,9 @@
 ---
-ecip: <ECIP number>
-title: 51% Attack Resistance 
+ecip: 1097
+title: Checkpointing based 51% attack resistance 
 lang: en
-author: Dimitris Karakostas, Radek Tkaczyk, Romain Pellerin, Brian McKenna
-discussions-to: https://github.com/ethereumclassic/ECIPs/issues/348 | https://github.com/input-output-hk/ECIPs/issues/1
+author: Dimitris Karakostas (@dimkarakostas), Radek Tkaczyk (@rtkaczyk), Romain Pellerin (@romainPellerin), Brian McKenna (@bpmckenna)
+discussions-to: https://github.com/input-output-hk/ECIPs/issues/1
 status: Draft
 type: Standards Track
 category: Core
