clarify pre-support event

--- a/_specs/ecip-1098.md
+++ b/_specs/ecip-1098.md
@@ -128,7 +128,7 @@ A proposal lifecycle for updates to p-ECTS consists of the following phases, del
 
 - **Proposal creation event**: The proposal gets created, its author's stake is registered as a *yes* vote and it immediately enters the *voting phase*.
 - **Voting phase**: Since creation, and up to *proposalCreationTime* + *proposalDebatePeriod*; the proposal can register new votes, change votes or unvote.
-- **Proposal pre-support event**: Before the proposal's voting ends, there is a *proposalPreSupportPeriod* in which the *preSupport* flag can be evaluated. If a majority has voted yes and has a quorum, this flag will be activated, which is a pre-condition for the proposal to pass. (See: [Ambush attacks prevention](#ambush-attacks-prevention) Section)
+- **Proposal pre-support event**: *proposalPreSupportPeriod* before the proposal's voting deadline, the *preSupport* flag can be evaluated. If a majority has voted yes and there is enough quorum, this flag will be activated, which is a pre-condition for the proposal to pass. (See: [Ambush attacks prevention](#ambush-attacks-prevention) Section)
 - **Proposal voting deadline event**: After *proposalCreationTime* + *proposalDebatePeriod*, the proposal no longer accepts votes, meaning that the proposal outcome is settled at this moment.
 - **Proposal execution phase**: After the deadline event, if the proposal gets approved, it's publicly available to be executed, making the change effective immediately.
 
