--- a/_specs/ecip-1043.md
+++ b/_specs/ecip-1043.md
@@ -43,13 +43,13 @@ Two variables directly control the dag size growth cacheSize and datasetSize
  
  - DatasetSize is the size of the ethash mining dataset that belongs to a certain block number. The dataset size grows linearly, however, we always take the highest prime below the linearly growing threshold in order to reduce the risk of accidental regularities leading to cyclic behavior.
  
-These values are calculated as blockNumber / epochLength. To set the dag growth to a number smaller than what would occur through the normal calculation. A Magic Dag Epoch block is of `42` replaces `blockNumber / epochLength` as the epoch number after the fork block and when the dag is calculated in the future this epoch is always used. Dag generation is uneffected and both cache and data size will pepertually be 22281536 and 1426062464 respectivly. 
+These values are calculated as blockNumber / epochLength. To set the dag growth to a number smaller than what would occur through the normal calculation. A Magic Dag Epoch block is of `64` replaces `blockNumber / epochLength` as the epoch number after the fork block and when the dag is calculated in the future this epoch is always used. Dag generation is uneffected and will compute at epoch 64 pepeturally. Epoch 64 was selected because it included block 1,920,000 where the mining community rallied to help ETC form and survive. 
  
 ```
 //run prior to calculating cacheSize or dataSize 
 
  if (blocknumber > ECIP1043Transition) {
-		epoch := 42
+		epoch := 64
 	} else {
 		epoch := int(block / epochLength)
 	}
