Rename with ECIP number

--- a/_specs/ecip-1096.md
+++ b/_specs/ecip-1096.md
@@ -1,6 +1,6 @@
 ---
 lang: en
-ecip: ECIP-10XX
+ecip: 1096
 title: 51% Attack protection system based on Bitcoin Merged Mining
 status: Draft
 type: Standards Track
@@ -18,7 +18,7 @@ We present a proposal for ETC to use blocks mined with SHA-256 in Bitcoin to det
 
 During August 2020, Ethereum Classic was the target of two successful 51% attacks. The events have shown that the current levels of security provided by the Ethash miners are not enough.
 
-To make ETC more secure, this proposal presents an enhancement that allows full nodes to know if the best chain they are choosen was publicly available at the time of creation or it was hidden to the network. Two measures are computed by the node: the cumulative visibility score and the average visibility score over a period of 1000 blocks. The higher the cumulative score, the highest the amount of information that was timely made public about this blockchain. Alarms can be established when the average visibility score drops below a certain threshold, such as 70%. 
+To make ETC more secure, this proposal presents an enhancement that allows full nodes to know if the best chain they have choosen was publicly available at the time of creation or it was hidden to the network. Two measures are computed by the node: the cumulative visibility score and the average visibility score over a period of 1000 blocks. The higher the cumulative score, the highest the amount of information that was timely made public about this blockchain. Alarms can be established when the average visibility score drops below a certain threshold, such as 70%. 
 ETC users can buy visibility proofs using a trustless contract running on the RSK blockchain.  A Visibility proof contains a checkpoint in the ETC blockchain that the user wants to be visible. The contract is queried by Bitcoin miners, which take the checkpointed block and publishes it in the coinbase of blocks. 
 
 
@@ -46,7 +46,7 @@ There are two types of Bitcoin headers: a **hit** and a **hit confirmation**. A 
 2. **conf**: hash=0000000000000000000a34ee53a217b6, blockHeight=644736,  Parent=0000000000000000000017b25971a701
 3. **conf**: hash=0000000000000000000db9f0fb12c4e9, blockHeight=644737, Parent=0000000000000000000a34ee53a217b6
 4. **hit**:  hash=0000000000000000000a7470181b940a2, blockHeight=644740, Parent=0000000000000000000a34ee53a217b6
-5. **conf**: hash=000000000000000000025fdd6edcee338, blockHeight=644741, Parent=0000000000000000000a7470181b940a
+5. **conf**: hash=000000000000000000025fdd6edcee338, blockHeight=644741, Parent=0000000000000000000a7470181b940a2
 ```
 Hit Confirmations can prove not to contain the merge-mining tag and merge-mining tree root, or they can prove to contain the tree, but not an ETC block in the tree (proof of non-membership). To prove non-membership the Merge-Mining tree has nodes augmented with the minimum blockchain ID and maximum blockchain IDs of the contained children. ETC Blockchain ID is 61.
 
@@ -83,7 +83,7 @@ The ETC-Address is verified so that all blocks presented must belong to the same
 
 ### Armadillo Data Verification
 
-The Armadillo Data allows a Fork Monitoring System to build a DAG or all the ETC forks in existence by connecting individual Bitcoin headers. The Armadillo Data is submitted along with the ETC-Address and ETC-Block-Hash to the Bitcoin mining system (through RSK). The ETC Blockchain consensus must verify that the Armadillo data is correct. Armadillo data contains 2 elements: the Commits-To-Parent-Vector and the Total-Difficulty-Compressed. The first element is an array of 8 element. Each element *e(i)* is an Uint16 that representsthe 16 less significant bits of the ETC block hash at position *n-(n mod 32)-(i***32)*, where *n* is the height of the block being checkpointed.
+The Armadillo Data allows a Fork Monitoring System to build a DAG of all the ETC forks in existence by connecting individual Bitcoin headers. The Armadillo Data is submitted along with the ETC-Address and ETC-Block-Hash to the Bitcoin mining system (through RSK). The ETC Blockchain consensus must verify that the Armadillo data is correct. Armadillo data contains 2 elements: the Commits-To-Parent-Vector and the Total-Difficulty-Compressed. The first element is an array of 8 element. Each element *e(i)* is an Uint16 that representsthe 16 less significant bits of the ETC block hash at position *n-(n mod 32)-(i***32)*, where *n* is the height of the block being checkpointed.
 The total difficulty is compressed simply by taking the 64 most significative bits.
 
 
@@ -152,14 +152,14 @@ Exchanges can stop confirming deposits during attack periods to prevent being af
 
 ## Detecting and Preventing Hidden Double-Spend Attacks
 
-We've shown that the VisibilityProof system provides monetary incentives to include visibility proofs, but the incentives are too low to guarantee protection against a hidden attacker that double-spends against an online exchage. We must ensure that there are stronger incentives for VisibilityProofs to exists, forcing the malicious fork to be become public. Once the fork is public, the Armadillo monitoring system can produce useful alerts.
+We've shown that the VisibilityProof system provides monetary incentives to include visibility proofs, but the incentives are too low to guarantee protection against a hidden attacker that double-spends against an online exchange. We must ensure that there are stronger incentives for VisibilityProofs to exists, forcing the malicious fork to be become public. Once the fork is public, the Armadillo monitoring system can produce useful alerts.
 Since several methods are possible to increase the need of VisibilityProofs, we think the method chosen should be specified in a separate ECIP.
 
-However here we present some possibilities:
+However, here we present some possibilities:
 
 * Request at least 33% of the Bitcoin hashrate providing visibility proofs with at least one visibility proof every 3 hours, in order to consider the fork valid. The forked chain can achieve this by including a single VisibilityProof hit every 3 hours. 
 
-* Using a system such as PirGuard to penalize forks that do not provide visibility proofs. Our suggestion is that a fixed visibility threshold is chosen, and penalization either occurs or not (boolean). It's also possible to penalize in inverse proportion to the visibility of a fork, but the effects on the stability of the blockchain in this case must be further studied.  
+* Using a system such as PirlGuard to penalize forks that do not provide visibility proofs. Our suggestion is that a fixed visibility threshold is chosen, and penalization either occurs or not (boolean). It's also possible to penalize in inverse proportion to the visibility of a fork, but the effects on the stability of the blockchain in this case must be further studied.  
 
 ## Copyright/Licensing
 
