--- a/_specs/ecip-1094.md
+++ b/_specs/ecip-1094.md
@@ -2,7 +2,7 @@
 lang: en
 ecip: 1094
 title: VeriBlock Proof-of-Proof 51%-Attack Prevention
-category: core
+category: Core
 status: Draft
 type: Standards Track
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/360
