--- a/_specs/ecip-1099.md
+++ b/_specs/ecip-1099.md
@@ -77,9 +77,15 @@ For the smoothest possible transition activation should occur on a block in whic
 * Epoch 376/2 = 188   (good) = block 11280000
 
 #### Clients ####
-* core-geth
-* besu
+* [] core-geth
+* [] besu
 #### Pools ####
-* open-ethereum-pool
+* [] open-ethereum-pool
 #### Mining Software ####
-* ethminer
+* [] ethminer  
+
+### References
+- [ECIP 1043 - Fixed DAG limit restriction](https://ecips.ethereumclassic.org/ECIPs/ecip-1043)
+- [ECIP-? Limit DAG growth #6](https://github.com/ethereumproject/ECIPs/issues/6)
+- [Ethash Sources](https://github.com/ethereum/ethash)
+- [DAG Size Calculator](https://investoon.com/tools/dag_size)
