ecip-1099: add discussions-to

--- a/_specs/ecip-1099.md
+++ b/_specs/ecip-1099.md
@@ -5,7 +5,7 @@ title: Calibrate Epoch Duration
 status: Draft
 type: Standards Track
 category: Core
-discussions-to:
+discussions-to: https://github.com/ethereumclassic/ECIPs/issues/368
 author: Luke Williams (@iquidus)
 created: 2020-09-10
 replaces: 1043
