ecip-1099: add research/test data to references

--- a/_specs/ecip-1099.md
+++ b/_specs/ecip-1099.md
@@ -83,6 +83,7 @@ For the smoothest possible transition activation should occur on a block in whic
 * [] ethminer  
 
 ### References
+- [ECIP-1099 Research/Test data](https://github.com/iquidus/ecip-1099-data)
 - [ECIP 1043 - Fixed DAG limit restriction](https://ecips.ethereumclassic.org/ECIPs/ecip-1043)
 - [ECIP-? Limit DAG growth #6](https://github.com/ethereumproject/ECIPs/issues/6)
 - [Ethash Sources](https://github.com/ethereum/ethash)
