--- a/_specs/ecip-1099.md
+++ b/_specs/ecip-1099.md
@@ -46,7 +46,7 @@ func calcEpoch(block uint64) int {
 // mining dataset.
 func seedHash(block uint64) []byte {
   seed := make([]byte, 32)
-  if block < epochLength {
+  if block < oldEpochLength {
     return seed
   }
   // keep using oldEpochLength here so seeds don't overlap
