--- a/_specs/ecip-1099.md
+++ b/_specs/ecip-1099.md
@@ -37,7 +37,7 @@ func calcEpochLength(blockNum uint64) uint64 {
 
 // calcEpoch returns the epoch for a given block number
 func calcEpoch(block uint64) int {
-  epochLength := uint64(calcEpochLength(block))
+  epochLength := calcEpochLength(block)
   epoch := int(block / epochLength)
   return epoch
 }
