ecip-1099: add apache-2 license

--- a/_specs/ecip-1099.md
+++ b/_specs/ecip-1099.md
@@ -9,6 +9,7 @@ discussions-to: https://github.com/ethereumclassic/ECIPs/issues/368
 author: Luke Williams (@iquidus)
 created: 2020-09-10
 replaces: 1043
+license: Apache-2
 ---
 
 ### Abstract
@@ -88,3 +89,7 @@ For the smoothest possible transition activation should occur on a block in whic
 - [ECIP-? Limit DAG growth #6](https://github.com/ethereumproject/ECIPs/issues/6)
 - [Ethash Sources](https://github.com/ethereum/ethash)
 - [DAG Size Calculator](https://investoon.com/tools/dag_size)
+
+## Copyright
+
+This work is licensed under [Apache License, Version 2.0](http://www.apache.org/licenses/).
