ECIP 1095: reject in favor of Keccak (1049)

--- a/_specs/ecip-1095.md
+++ b/_specs/ecip-1095.md
@@ -2,13 +2,13 @@
 lang: en
 ecip: 1095
 title: Change the ETC Proof of Work Algorithm to Sha-3-256
-status: Last Call
-review-period-end: 2020-10-09
+status: Rejected
 type: Standards Track
 category: Core
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/342
 author: Stevan Lohja (stevanio@protonmail.com)
 created: 2020-08-20
+superseded-by: 1049
 ---
 
 # Change the ETC Proof of Work Algorithm to Sha-3-256 (vanilla Sha-3)
