include core-geth implementation link
Signed-off-by: meows <b5c6@protonmail.com>

--- a/_specs/ecip-11355.md
+++ b/_specs/ecip-11355.md
@@ -144,6 +144,8 @@ The graphs below show a 200 block chain accepting, sidechaining, or rejecting re
 
 This feature does not require a hard fork, but the network stands to benefit and avoid risk with majority coordinated acivation.
 
+__Core-Geth__
+
 - Feature is tentatively proposed to activate in Core-Geth on Ethereum Classic network at and above block 11295300.
 - Feature is proposed to activate in Core-Geth on Ethereum Classic's Mordor test network at and above block 2290740.
 
@@ -152,8 +154,8 @@ This feature does not require a hard fork, but the network stands to benefit and
   + MESS is only enabled once a peer has completed initial chain synchronisation, not while they are fast syncing or even full syncing during the download and process phase. This reduces the chances of a node coming online being lured into an eclipse scenario.
   + MESS is only enabled if a peer has greater than or equal to the `2 * MinimumSyncPeers` peers. In Core-Geth this value is by default `5`, yielding a necessary limit of `10` for the MESS feature.
   + MESS is disabled if, once synced, a node's head block is not changed within a time limit (ie becomes stale).  In Core-Geth this value is by default `10 * 13 seconds`.
-
-Once proposed, a link to the associated Core-Geth implementation change set will be included here.
+  
+The associated Core-Geth implementation is available [here](https://github.com/etclabscore/core-geth/pull/181).
 
 ## References
 
