--- a/_specs/ecip-1100.md
+++ b/_specs/ecip-1100.md
@@ -1,9 +1,9 @@
 ---
-ecip: 11355
+ecip: 1100
 title: MESS (Modified Exponential Subjective Scoring)
 lang: en
 author: Isaac <b5c6@protonmail.com>
-discussions-to: TODO
+discussions-to: https://github.com/ethereumclassic/ECIPs/issues/374
 status: Draft
 type: Standards Track
 category: ECBP
