--- a/_specs/ecip-1093.md
+++ b/_specs/ecip-1093.md
@@ -1,7 +1,7 @@
 ---
 lang: en
 ecip: 1093
-title: If GPU-friendly Ethash is Removed, Change the ETC Proof of Work Algorithm to CPU-friendly RandomX
+title: If GPU-friendly Ethash is Removed then Change the ETC Proof of Work Algorithm to CPU-friendly RandomX
 status: Withdrawn
 type: Standards Track
 category: Core
