--- a/_specs/ecip-1093.md
+++ b/_specs/ecip-1093.md
@@ -34,7 +34,7 @@ Related ECIPs to the discussion:
 
 This topic has evolved rapidly since the date I originally submitted this proposal. As the author of ECIP-1093, I believe this ECIP is unnecessary at this point in time and request that it be moved to `Withdrawn` status. This ECIP became obsolete due to the materialization of a vocal opposition to changing the Ethereum Classic mining algorithm to SHA3 (ECIP-1049 & 1095). Dexaran of Ethereum Commonwealth has committed development resources to the GPU-friendly Ethash chain should the ETC mining community chose to continue to mine Ethash ( https://github.com/ethereumclassic/ECIPs/issues/13#issuecomment-687297252 ).
 
-Notable Unaddressed Opposition to the SHA3 Coalition's Proposal:
+A non-exhaustive list of comments from a notable opposition to changing the Ethereum Classic mining algorithm from Ethash:
 
 Sourced from ECIP-1095 Thread
 - https://github.com/ethereumclassic/ECIPs/issues/342#issuecomment-685208360
