--- a/_specs/ecip-1093.md
+++ b/_specs/ecip-1093.md
@@ -30,9 +30,9 @@ Related ECIPs to the discussion:
 - ECIP-1095 SHA3 ASIC. https://github.com/ethereumclassic/ECIPs/issues/342
 - ECIP-1099 Ethash GPU. https://github.com/ethereumclassic/ECIPs/issues/368
 
-#### Withdrawn Status Update and Explaination
+#### Withdrawn Status Update and Explanation
 
-This topic has evolved rapidly since the date I originally submitted this proposal. As the author of ECIP-1093, I believe this ECIP is unnecessary at this point in time and request that it be moved to `Withdrawn` status. This ECIP became obsolete due to the materialization of a vocal opposition to changing the Ethereum Classic mining algorithm to SHA3 (ECIP-1049 & 1095). Dexaran of Ethereum Commonwealth has committed development resources to the GPU-friendly Ethash chain should the ETC mining community chose to continue to mine Ethash ( https://github.com/ethereumclassic/ECIPs/issues/13#issuecomment-687297252 ).
+This topic has evolved rapidly since the date I originally submitted this proposal. As the author of ECIP-1093, I believe this ECIP is unnecessary at this point in time and request that it be moved to `Withdrawn` status. This ECIP became obsolete due to the materialization of a vocal opposition to changing the Ethereum Classic mining algorithm. Dexaran of Ethereum Commonwealth has committed development resources to the GPU-friendly Ethash chain should the ETC mining community chose to continue to mine Ethash ( https://github.com/ethereumclassic/ECIPs/issues/13#issuecomment-687297252 ). That means that any proposal to change the mining algorithm will likely end up in contention, which is against the goals of the ECIP process.
 
 A non-exhaustive list of comments from a notable opposition to changing the Ethereum Classic mining algorithm from Ethash:
 
