_specs/ecip-1100.md: remove copyright footer, :nail_care: some words
Signed-off-by: meows <b5c6@protonmail.com>

--- a/_specs/ecip-1100.md
+++ b/_specs/ecip-1100.md
@@ -86,7 +86,7 @@ func (bc *BlockChain) ecbp1100(commonAncestor, current, proposed *types.Header) 
 
 This is a _modified (M)_ version of Buterin's _Exponential Subjective Scoring (ESS)_ by
 - using a capped sinusoidal function instead of an unbounded exponential function
-- using the difference of proposed head time(stamp) from common ancestor time(stamp), rather than the previously described block lengths or times of block reception by Buterin.
+- using the difference of proposed head time(stamp) from common ancestor time(stamp), rather than the previously described block lengths or times of block reception used by Buterin.
 
 See [References](#References) for what I've found on the topic.
 
@@ -102,7 +102,7 @@ See [References](#References) for what I've found on the topic.
 
 #### Costs
 
-- Nodes subject to eclipse attacks (mostly considered as nodes coming online after a long time or starting out) are vulnerable to destitution, even once released. This is addressed by the function's ceiling causing the attacker to establish a total difficulty 1/31x of the competing honest chain, and can be addressed further by the operator including a checkpoint value.
+- Nodes subject to eclipse attacks (mostly considered as nodes coming online after a long time or starting out) are vulnerable to destitution, even once released. This is addressed by the function's ceiling causing the attacker to need to establish (and maintain) a total difficulty 1/31x of the competing honest chain, and can be addressed further by the operator including a checkpoint value.
 - It may be anticipated that the network uncle and waste rates will rise slightly, as blocks that would otherwise be [randomly included](http://www.cs.cornell.edu/~ie53/publications/btcProcFC.pdf) will be rejected. ETC currently has a 3.5% uncle rate compared to ETH's 5.5%.
 
 
@@ -202,6 +202,3 @@ antigravity product seem well-intentioned but practically ineffectual.
 s(x)=8 (-cos((0.5 π x)/(6000))+1)^(2)+1
 ```
 
-## Copyright/Licensing
-
-Copyright 2020 Isaac A. \<b5c6@protonmail.com\>
