_specs/ecip-1100.md: update accept/side/reject segment graphs
Now rejection (invalidation) is not a thing

Signed-off-by: meows <b5c6@protonmail.com>

--- a/_specs/ecip-1100.md
+++ b/_specs/ecip-1100.md
@@ -347,11 +347,11 @@ Network participants are allowed to be stubborn curmudgeons with opinions. ECIP1
 - Intentional partitions are extremely difficult to establish and maintain.
 - The polynomial function yields a "ceiling" that would be extravagantly high for an attacker to achieve relative to the main network, but within reasonable operating bounds for the victim of an eclipse attack to eventually recover and rejoin the network. Unbounded exponential growth for the antigravity function serves no purpose beyond some point.
 
-The graphs below show a 200 block chain accepting, sidechaining, or rejecting reorganizations of varying relative difficulty and length.
+The graphs below show a 200 block chain accepting, sidechaining ~~or rejecting~~ reorganizations of varying relative difficulty and length.
 
-![nomess-acceptreject](https://user-images.githubusercontent.com/45600330/92998210-2a6e2500-f4de-11ea-9c25-3e20bde41ef1.png)
+![nomess-acceptreject](https://user-images.githubusercontent.com/45600330/93946542-2670ad00-fcff-11ea-8014-ba95d0e04765.png)
 
-![mess-acceptreject](https://user-images.githubusercontent.com/45600330/92998215-2fcb6f80-f4de-11ea-8af9-178d905c9086.png)
+![mess-acceptreject](https://user-images.githubusercontent.com/45600330/93946544-27094380-fcff-11ea-9ad0-bd9526fad286.png)
 
 
 #### Costs
