1099: update block numbers

--- a/_specs/ecip-1099.md
+++ b/_specs/ecip-1099.md
@@ -27,8 +27,8 @@ Calibrating these parameters to better reflect todays hardware markets and minin
 
 Ethash transitions to a modified Dagger Hashimoto algorithm, referred to hereby as _Etchash_, on block `ETCHASH_FORK_BLOCK`:
 
-* For the Ethereum Classic main network: `ETCHASH_FORK_BLOCK := 11_460_000` (Epoch 382)
-* For the Mordor Classic test network: `ETCHASH_FORK_BLOCK := 2_340_000` (Epoch 78)
+* For the Ethereum Classic main network: `ETCHASH_FORK_BLOCK := 11_700_000` (Epoch 390)
+* For the Mordor Classic test network: `ETCHASH_FORK_BLOCK := 2_520_000` (Epoch 82)
 
 ### Specification ###
 
@@ -82,9 +82,9 @@ Mining software and pool implementations required.
 
 For the smoothest possible transition activation should occur on a block in which an epoch transition to an even epoch number is occurring.  
 
-* Epoch 374/2 = 187   (good) = block 11220000
-* Epoch 375/2 = 187.5 (bad)  -
-* Epoch 376/2 = 188   (good) = block 11280000
+* Epoch 388/2 = 194   (good) = block 11_640_000
+* Epoch 389/2 = 194.5 (bad)  -
+* Epoch 390/2 = 195   (good) = block 11_700_000
 
 #### Clients ####
 * [] core-geth
