--- a/_specs/ecip-1099.md
+++ b/_specs/ecip-1099.md
@@ -29,6 +29,7 @@ Ethash transitions to a modified Dagger Hashimoto algorithm, referred to hereby 
 
 * For the Ethereum Classic main network: `ETCHASH_FORK_BLOCK := 11_700_000` (Epoch 390)
 * For the Mordor Classic test network: `ETCHASH_FORK_BLOCK := 2_520_000` (Epoch 82)
+* For the Kotti Classic test network, no upgrade is required.
 
 ### Specification ###
 
@@ -87,20 +88,22 @@ For the smoothest possible transition activation should occur on a block in whic
 * Epoch 390/2 = 195   (good) = block 11_700_000
 
 #### Clients ####
-* [] core-geth
-* [] besu
-#### Pools ####
-* [] open-ethereum-pool
-#### Mining Software ####
-* [] ethminer  
+* [x] core-geth - https://github.com/etclabscore/core-geth/pull/186
+* [ ] besu
 
-### References
+#### Pools ####
+* [ ] open-ethereum-pool
+
+#### Mining Software ####
+* [ ] ethminer
+
+### References ###
 - [ECIP-1099 Research/Test data](https://github.com/iquidus/ecip-1099-data)
 - [ECIP 1043 - Fixed DAG limit restriction](https://ecips.ethereumclassic.org/ECIPs/ecip-1043)
 - [ECIP-? Limit DAG growth #6](https://github.com/ethereumproject/ECIPs/issues/6)
 - [Ethash Sources](https://github.com/ethereum/ethash)
 - [DAG Size Calculator](https://investoon.com/tools/dag_size)
 
-## Copyright
+## Copyright ##
 
 This work is licensed under [Apache License, Version 2.0](http://www.apache.org/licenses/).
