--- a/_specs/ecip-1100.md
+++ b/_specs/ecip-1100.md
@@ -175,7 +175,7 @@ def get_curve_function_numerator(time_delta: int) -> int:
 __Condition `ecbp1100`__
 
 ```python
-if proposed_subchain_td * CURVE_FUNCTION_DENOMINATOR < get_curve_function_numerator(proposed.Time - commonAncestor.Time) * local_subchain_td:
+if proposed_subchain_td * CURVE_FUNCTION_DENOMINATOR < get_curve_function_numerator(current.Time - commonAncestor.Time) * local_subchain_td:
     return true
 return false
 ```
@@ -200,22 +200,21 @@ func (bc *BlockChain) ecbp1100(commonAncestor, current, proposed *types.Header) 
 	proposedSubchainTD := new(big.Int).Sub(proposedTD, commonAncestorTD)
 	localSubchainTD := new(big.Int).Sub(localTD, commonAncestorTD)
 
-	xBig := big.NewInt(int64(proposed.Time - commonAncestor.Time))
+	xBig := big.NewInt(int64(current.Time - commonAncestor.Time))
 	eq := ecbp1100PolynomialV(xBig)
 	want := eq.Mul(eq, localSubchainTD)
 
 	got := new(big.Int).Mul(proposedSubchainTD, ecbp1100PolynomialVCurveFunctionDenominator)
 
-	prettyRatio, _ := new(big.Float).Quo(
-		new(big.Float).SetInt(got),
-		new(big.Float).SetInt(want),
-	).Float64()
-
 	if got.Cmp(want) < 0 {
+		prettyRatio, _ := new(big.Float).Quo(
+			new(big.Float).SetInt(got),
+			new(big.Float).SetInt(want),
+		).Float64()
 		return fmt.Errorf(`%w: ECBP1100-MESS 🔒 status=rejected age=%v current.span=%v proposed.span=%v tdr/gravity=%0.6f common.bno=%d common.hash=%s current.bno=%d current.hash=%s proposed.bno=%d proposed.hash=%s`,
 			errReorgFinality,
 			common.PrettyAge(time.Unix(int64(commonAncestor.Time), 0)),
-			common.PrettyDuration(time.Duration(current.Time - commonAncestor.Time)*time.Second),
+			common.PrettyDuration(time.Duration(current.Time-commonAncestor.Time)*time.Second),
 			common.PrettyDuration(time.Duration(int32(xBig.Uint64()))*time.Second),
 			prettyRatio,
 			commonAncestor.Number.Uint64(), commonAncestor.Hash().Hex(),
@@ -313,8 +312,8 @@ var ecbp1100PolynomialVHeight = new(big.Int).Mul(new(big.Int).Mul(ecbp1100Polyno
 ## Rationale
 
 This is a _modified (M)_ version of Buterin's _Exponential Subjective Scoring (ESS)_ by
-- using a capped polynomial function instead of an unbounded function
-- using the difference of proposed head time(stamp) from common ancestor time(stamp), rather than the previously described block lengths or times of block reception used by Buterin.
+- using a capped polynomial function instead of an unbounded exponential function
+- using the difference of local head time(stamp) from common ancestor time(stamp), rather than the previously described block lengths or times of block reception used by Buterin.
 
 See [References](#References) for what I've found on the topic.
 
